--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div class="col-lg-12 d-flex align-items-center">
                             <!--<button href="#" class="btn btn-outline-info me-5">Download CV</button>-->
                             <a href="Resume.pdf" download="">
-                            <button href="Resume.pdf" class="me-5 my-3 " download="">
+                            <button href="Resume.pdf" class="me-5 my-3 " download>
                                 <span>Download CV</span>
                                     <div class="liquid"></div>
                             </button>
