--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <a href="https://t.me/d_lushi" class="text-info me-2"><i class="fab fa-telegram"></i></a>
                                 <!--<a href="#" class="text-info me-2"><i class="fab fa-linkedin-in"></i></a>-->
                                 <a href="https://github.com/nnaatti" class="text-info me-2"><i class="fab fa-github"></i></a>
-                                <a href="https://www.instagram.com" class="text-info me-2"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/natfl3x" class="text-info me-2"><i class="fab fa-instagram"></i></a>
                             </div>
                         </div>     
                         </div>
