--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="col-md-6">
                     <div class="about-text">
                         <h3 class="fs-4 mb-3">I'm a 3rd year computer science student </h3>
-                        <p class="text-muted">Hey there I'm Natnael Bedilu a 3rd year computer science student at American College of Technology.</p>
+                        <p class="text-muted">Hey there I'm Natnael Bedilu a 3rd year computer science student at American College of Technology. I'm working hard to make connections for future internships and jobs.</p>
                     </div>
                     <div class="row text-center text-uppercase my-3">
                         <div class="col-lg-12 d-flex align-items-center">
